Write Commands.Check to clean up the project direcory

--- a/enm.cabal
+++ b/enm.cabal
@@ -21,4 +21,7 @@ executable enm
                       Commands.Version
 					  Commands.Ls
 					  Commands.Ping
+					  Commands.Clean
+					  Commands.Check
+					  Settings.Config
     default-language: Haskell2010
